--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -83,7 +83,7 @@ nav.navbar.navbar-default {
 
 .categories {
   text-align:center !important;
-  margin-bottom:20px;
+  /*margin-bottom:20px;*/
   border-bottom:1px solid #e4e4e4;
   padding:10px;
 }
